# dnser

./: Cargo.toml  README.md  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: dnser.yaml  docs.yaml  server.sh
dnser/: all.html  enum.Dnser.html  fn.main.html  index.html  macro.buf!.html  macro.buf.html  sidebar-items.js
dnser/client/: fn.lookup.html  fn.recursive_lookup.html  index.html  sidebar-items.js
dnser/dns_packet/: constant._IMPL_NUM_FromPrimitive_FOR_QueryType.html  constant._IMPL_NUM_FromPrimitive_FOR_ResultCode.html  constant._IMPL_NUM_ToPrimitive_FOR_QueryType.html  constant._IMPL_NUM_ToPrimitive_FOR_ResultCode.html  enum.DnsRecord.html  enum.QueryType.html  enum.ResultCode.html  index.html  sidebar-items.js  struct.DnsHeader.html  struct.DnsPacket.html  struct.DnsQuestion.html
dnser/dns_packet_buf/: index.html  sidebar-items.js  struct.DnsPacketBuf.html
dnser/error/: enum.Error.html  index.html  type.Result.html
dnser/recursive/: index.html  sidebar-items.js  struct.AuthorityNsRecord.html
dnser/server/: fn.handle_query.html  fn.prepare_query.html  fn.run.html  index.html  sidebar-items.js
dnser/utils/: index.html
implementors/core/clone/: trait.Clone.js
implementors/structopt/: trait.StructOpt.js  trait.StructOptInternal.js
src/: client.rs  dns_packet.rs  dns_packet_buf.rs  error.rs  main.rs  recursive.rs  server.rs  utils.rs
src/dnser/: client.rs.html  dns_packet.rs.html  dns_packet_buf.rs.html  error.rs.html  main.rs.html  recursive.rs.html  server.rs.html  utils.rs.html
(+19 files in other folders)
