[package]
name = "dnser"
version = "0.2.0"
authors = ["BugenZhao <i@bugenzhao.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "*"
lazy_static = "*"
thiserror = "*"
num-traits = "0.2"
num-derive = "0.3"
rand = "*"
structopt = "*"
clap = "*"
tokio = { version = "0.3", features = ["full"] }
async-recursion = "0.2"
